fix: align private key JWT implementation with platform conventions